test/good/arrays/comprehension11.px

i = 0
c = false
print [for i in ["I"] for i, c in 1..2, 'a'..'b' yield "{i}{c}"]
print i, c
