test/bad/dictionaries/spread04.px

a = {1: ['a']}
b = {...:a, 2: [""]}
